clusters/local/apps/envoy-gateway/gw-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: local-nodeport
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.${cluster_subdomain}"
      allowedRoutes:
        namespaces:
          from: All
